@@ -1,5 +1,6 @@
 .classpath
 .project
+bin
 build
 cobertura.jar
 cobertura.ser
