@@ -356,6 +356,11 @@ public class HTMLReport
 				out.println("</p>");
 			}
 
+			out.println("<div class=\"footer\">");
+			out
+					.println("Reports generated by <a href=\"http://cobertura.sourceforge.net/\" target=\"_top\">Cobertura</a>.");
+			out.println("</div>");
+
 			out.println("</body>");
 			out.println("</html>");
 		}
@@ -477,6 +482,12 @@ public class HTMLReport
 			}
 			out.println("</table>");
 			out.println("</p>");
+
+			out.println("<div class=\"footer\">");
+			out
+					.println("Reports generated by <a href=\"http://cobertura.sourceforge.net/\" target=\"_top\">Cobertura</a>.");
+			out.println("</div>");
+
 			out.println("</body>");
 			out.println("</html>");
 		}
@@ -543,6 +554,37 @@ public class HTMLReport
 		return ret.toString();
 	}
 
+	private static String generateNAPercent()
+	{
+		StringBuffer sb = new StringBuffer();
+		sb
+				.append("<table cellpadding=\"0\" cellspacing=\"0\" align=\"right\">");
+		sb.append("<tr>");
+		sb
+				.append("<td>"
+						+ generateHelpURL(
+								"N/A",
+								"Line coverage and branch coverage will appear as \"Not Applicable\" when Cobertura can not find line number information in the .class file.  This happens for stub and skeleton classes, interfaces, or when the class was not compiled with \"debug=true.\"")
+						+ "&nbsp;</td>");
+		sb.append("<td>");
+		sb
+				.append("<table class=\"percentGraph\" cellpadding=\"0\" cellspacing=\"0\">");
+		sb.append("<tr><td class=\"NA\" width=\"100\"></td></tr>");
+		sb.append("</table>");
+		sb.append("</td>");
+		sb.append("</tr>");
+		sb.append("</table>");
+		return sb.toString();
+	}
+
+	private static String generateTableColumnsForNA(double ccn)
+	{
+		return "<td class=\"value\">" + generateNAPercent() + "</td>"
+				+ "<td class=\"value\">" + generateNAPercent() + "</td>"
+				+ "<td class=\"value\">" + getDoubleValue(ccn) + "</td>";
+
+	}
+
 	private static String generateTableColumnsFromData(double lineCoverage,
 			double branchCoverage, double ccn)
 	{
@@ -601,8 +643,15 @@ public class HTMLReport
 		ret.append("  <tr>");
 		ret.append("<td class=\"text\"><a href=\"" + clazz.getLongName()
 				+ ".html\">" + clazz.getName() + "</a></td>");
-		ret.append(generateTableColumnsFromData(lineCoverage, branchCoverage,
-				ccn));
+		if (clazz.getNumberOfLines() == 0)
+		{
+			ret.append(generateTableColumnsForNA(ccn));
+		}
+		else
+		{
+			ret.append(generateTableColumnsFromData(lineCoverage,
+					branchCoverage, ccn));
+		}
 		ret.append("</tr>");
 		return ret.toString();
 	}
